Fixed progressbar markers not showing up bug.
The markers are now located above the actual progress bar, so they can be
seen even after it has passed them.

--- a/www/css/devotionalpages.css
+++ b/www/css/devotionalpages.css
@@ -80,6 +80,7 @@ body {
 }
 
 #progressbar {
+	position: relative;
     z-index: 0;
     display: block;
     height: 100%;
@@ -100,8 +101,10 @@ body {
 }
 
 .divider {
+	position: relative;
     float: left;
-    width: 9.09%;
+    width: 0%;
     height: 100%;
     border-right: 1px solid black;
+	z-index: 1;
 }
